--- a/src/components/ConstellationSection.astro
+++ b/src/components/ConstellationSection.astro
@@ -50,7 +50,7 @@ import { constellations, constellationCategories } from '../data/constellations'
       <!-- Controles laterales organizados -->
       <div class="side-controls">
         <ConstellationFiltersSimple />
-        <ConstellationMinimapSimple constellations={constellations} />
+        <!-- <ConstellationMinimapSimple constellations={constellations} /> -->
       </div>
     </div>
   </div>
